tests/conformance/syntax/positive/directed_j_eliminator_valid.ditt
module Syntax.DirectedJEliminator where

postulate
  C : Cat
  Phi : (x : C) -> (y : C) -> Prop
  P : (x : C) -> (y : C) -> Prop
  h : (z : C) -> Phi z z -> P z z

j_elim_ascii (a : C^) (b : C) (e : a ->[C] b) (phi : Phi b a) : P a b = J h [e]
j_elim_paren (a : C^) (b : C) (e : a ->[C] b) (phi : Phi b a) : P a b = J (h) [e]
